--- a/templates/login.html
+++ b/templates/login.html
@@ -1,30 +1,29 @@
 {% extends "base.html" %}
 {% block content %}
 
-<div class="row">
-    <div class="col s12 l4 offset-l4 ">
-        <h4>Login</h4>
+<div class="row center-form">
+    <div class="col s12 l10 offset-l1 ">
+        <h4><i class="small material-icons prefix">assignment</i> Login</h4>
         <form action="{{ url_for('login') }}" method=POST>
+            
             <div class="input-field col s12">
-                <i class="material-icons prefix">assignment</i>
-                <input id="username" name="username" type="text" class="validate" required maxlength="15">
+                <input id="username" name="username" type="text" class="validate" required>
                 <label for="username">Username</label>
             </div>
             <div class="input-field col s12">
-                <i class="material-icons prefix">assignment</i>
                 <input type="password" id="pass" name="pass" class="validate" required>
                 <label for="pass">Password</label>
             </div>
             <div class="row">
-                <button class="btn waves-effect waves-light" type="submit">Log In
-                    <i class="material-icons right">playlist_add</i>
-                </button>
+                <div class="col s12">
+                    <button class="btn waves-effect waves-light login-btn-align" type="submit">Log In</button>
+                </div>
             </div>
-            <br>
             <div>
-                Don't have an account? <a href="{{ url_for('register') }}">Sign up here</a>.
+                <div class="col s12">
+                   <span class="register-link">Don't have an account?</span> <a href="{{ url_for('register') }}">Sign up here</a> 
+                </div>
             </div>
-
         </form>
 
     </div>
