--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -32,10 +32,6 @@
 {% block content %}
 <div class="row">
     <div class="col s12">
-        <h1 class="header center pink-text text-lighten-3">CULINARY WORLD</h1>
-        <div class="row center">
-            <h5 class="header col s12 light grey-text text-lighten-1">Your best recipes from all the world</h5>
-        </div>
         <div class="input-field col s12">
             <form action="{{ url_for('find_recipe') }}" method="POST">
                 <div class="input-field search-bar">
@@ -52,11 +48,13 @@
         </div>
     </div>
     {% for recipe in recipes %}
-    <div class="col s12 m6 l3">
+    <div class="col s12 m6 l4">
         <div class="card">
             <div class="card-image">
-                <img src="{{ recipe.image_url}}">
-                <span class="card-title">{{ recipe.recipe_name }}</span>
+                <a href="/recipes/{{ recipe._id }}">
+                    <img src="{{ recipe.image_url}}">
+                    <span class="card-title">{{ recipe.recipe_name }}</span>
+                </a>
             </div>
             <div class="card-content">
                 <p><i class="material-icons prefix">location_on</i> Cuisine: {{ recipe.cuisine_name }}</p>
