--- a/templates/login.html
+++ b/templates/login.html
@@ -1,32 +1,31 @@
 {% extends "base.html" %}
 {% block content %}
 
+<!-- login form -->
 <div class="row center-form">
     <div class="col s12 l10 offset-l1 ">
         <h4><i class="small material-icons prefix">assignment</i> Login</h4>
-        <form action="{{ url_for('login') }}" method=POST>
-            
+        <form action="{{ url_for('login') }}" method=POST class="data-box">
             <div class="input-field col s12">
                 <input id="username" name="username" type="text" class="validate" required>
                 <label for="username">Username</label>
-            </div>
+            </div><!-- // input-field -->
             <div class="input-field col s12">
                 <input type="password" id="pass" name="pass" class="validate" required>
                 <label for="pass">Password</label>
-            </div>
+            </div><!-- // input-field -->
             <div class="row">
                 <div class="col s12">
                     <button class="btn waves-effect waves-light login-btn-align" type="submit">Log In</button>
                 </div>
-            </div>
+            </div><!-- // input-field -->
             <div>
                 <div class="col s12">
-                   <span class="register-link">Don't have an account?</span> <a href="{{ url_for('register') }}">Sign up here</a> 
+                    <span class="register-link">Don't have an account?</span> <a href="{{ url_for('register') }}">Sign Up </a>
                 </div>
             </div>
-        </form>
-
+        </form><!-- // form -->
     </div>
-</div>
+</div><!-- // center-form -->
 
 {% endblock %}
