column offset adjustment

--- a/templates/registration.html
+++ b/templates/registration.html
@@ -3,8 +3,7 @@
 
 <!-- registration form -->
 <div class="row center-form">
-    <div class="col s12 l10 offset-l1">
-        
+    <div class="col s12 m8 offset-m2 l2 offset-l5">
         <h4><i class="small material-icons prefix">assignment</i> Registration</h4>
         <form action="{{ url_for('register') }}" method=POST class="data-box">
             <div class="input-field col s12">
