--- a/templates/recipe_details.html
+++ b/templates/recipe_details.html
@@ -1,25 +1,37 @@
 {% extends 'base.html' %}
 {% block content  %}
 
-<div class="row">
-    <div class="col s12 m4">
-        <img src="{{ recipes.image_url }}" class="img-responsive" style="width:300px">
-        <div class="col s12 m4">
-            <button class="print" onclick="printRecipe()"><i class="material-icons prefix">print</i></button>
-        </div>
-    </div>
-    <div class="col s12 m8">
-        <h1>{{ recipes.recipe_name }}</h1>
-        <p>Added by: {{ recipes.author }}</p>
+<div class="row recipe-details">
+    <div class="col s12 l6 image-top">
+        <img src="{{ recipes.image_url }}">
+        <div class="col s12 print">
+            <button class="btn waves-effect waves-light print" onclick="printRecipe()">Print Recipe</button>
+        </div><!-- // col l5-->
+    </div><!-- // col image-top -->
+    <div class="col s12 l5 offset-l1">
+        <h1 class="main-heading">{{ recipes.recipe_name }}</h1>
+        <p><i>Added by: {{ recipes.author }}</i></p>
+        <table class="icon-summary">
+            <tbody>
+                <tr>
+                    <td><i class="material-icons prefix">location_on</i> Cuisine: {{ recipes.cuisine_name }}</td>
+                    <td><i class="material-icons prefix">restaurant_menu</i> Difficulty: {{ recipes.difficulty}} </td>
+                </tr>
+                <tr>
+                    <td><i class="material-icons prefix">access_time</i> Time: {{ recipes.prep_time }} </td>
+                    <td><i class="material-icons prefix">people</i> Serve: {{ recipes.serves }}</td>
+                </tr>
+            </tbody>
+        </table>
         <div class="row">
-            <div class="col s12">
+            <div class="col s12 edit-info">
                 {% if 'username' in session %}
                 <a href="{{ url_for('edit_recipe', recipe_id = recipes._id) }}"
                     class="waves-effect waves-light btn">Edit</a>
                 <a href="#modal_confirm" class="waves-effect waves-light btn modal-trigger">Delete</a>
                 {% else %}
-                <div class="col s12">
-                    <p>You need to be loged in to edit or delete recipe</p>
+                <div class="col s12 user-note">
+                    <p>Please <a href="{{ url_for('login') }}">Login</a> or <a href="{{ url_for('register') }}">Register</a> to edit or delete recipe</p>
                 </div>
                 {% endif %}
                 <!-- Modal Structure -->
@@ -38,48 +50,34 @@
                 </div>
             </div>
         </div>
-        <table>
-            <tbody>
-                <tr>
-                    <td><i class="material-icons prefix">location_on</i> Cuisine: {{ recipes.cuisine_name }}</td>
-                    <td><i class="material-icons prefix">restaurant_menu</i> Difficulty: {{ recipes.difficulty}} </td>
-                </tr>
-                <tr>
-                    <td><i class="material-icons prefix">access_time</i> Time: {{ recipes.prep_time }} </td>
-                    <td><i class="material-icons prefix">people</i> Serve: {{ recipes.serves }}</td>
-                </tr>
-            </tbody>
-        </table>
-        <div class="row">
+    </div><!-- -->
+    <div class="row description">
+        <div class="col s12">
             <p>{{ recipes.description }}</p>
         </div>
-
     </div>
-</div>
-<div class="row">
-    <div class="col s12 m4">
-        <div class="row">
-            <h3>Ingredients:</h3>
-
-            <table>
+    <div class="row">
+        <div class="col s12 l5">
+            <h3 class="preps">Ingredients:</h3>
+            <table class="striped table-border">
                 <tbody>
-                    <!--goes through ingredients array and displays-->
+                    <!--goes through ingredients array and display it-->
                     {% for ingredient in recipes.ingredients %}
                     <tr>
-                        <td>{{ ingredient }}</td>
+                        <td class="bold-item">{{ ingredient }}</td>
                     </tr>
                     {% endfor %}
                 </tbody>
             </table>
-
         </div>
-    </div>
-    <div class="col s12 m8">
-        <h3>Preparation Steps</h3>
-        {% for step in recipes.method %}
-        <p>{{ loop.index }}. {{ step }}</p>
-        {% endfor %}
-    </div>
-</div>
+        <div class="col s12 l6 offset-l1">
+            <h3 class="preps">Preparation Steps</h3>
+            <!-- add index and loop throguth each step -->
+            {% for step in recipes.method %}
+            <p><span class="bold-item">{{ loop.index }}.</span> {{ step }}</p>
+            {% endfor %}
+        </div><!-- // col m7-->
+    </div><!-- // col m5-->
+</div><!-- // row-->
 
 {% endblock %}
