recipe_details page style added

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -23,6 +23,7 @@ nav .nav-wrapper {
     left: 50%;
     -ms-transform: translate(-50%, -45%);
     transform: translate(-50%, -45%);
+    width: 100%;
 }
 
 .data-box {
@@ -64,27 +65,26 @@ nav .nav-wrapper {
     overflow: hidden;
     background: #000;
     box-shadow: 0 2px 4px 0 rgba(0,0,0,0.7);
-    width: 333px;
-    height: 185px;
+    max-height: 170px;
 }
 
 .card .card-image img {
     transform: scale(1.25);
     transition: linear all .3s;
-    opacity: .5;
+    opacity: .7;
     border-radius: none;
 }
 
 .card .card-image img:hover{
     transform: scale(1);
     transition: linear all .3s;
-    opacity: .7;
+    opacity: .9;
 }
 
 .card .card-image .card-title {
     width: 100%;
     padding: 10px 25px;
-    text-shadow: 2px 2px 2px black;
+    text-shadow: 3px 3px 4px black;
     font-weight: 400;
 }
 
@@ -98,6 +98,12 @@ nav .nav-wrapper {
     vertical-align: middle;
 }
 
+.bold-text {
+    font-weight: bold;
+    color: firebrick;
+    margin-left: 5px;
+}
+
 .material-icons {
     padding-right: 10px;
 }
@@ -108,7 +114,73 @@ nav .nav-wrapper {
 
 /* recipe details */
 .image-top {
+    margin-top: 50px;
+}
+
+.image-top img {
+    width: 100%;
+    max-height: 350px;
+}
+
+.recipe-details {
+    background: aliceblue;
+    padding: 30px;
+    box-shadow: 2px 2px 2px grey;
     margin-top: 60px;
+}
+
+.print {
+    margin-top: 5px;
+}
+
+.icon-summary {
+    margin-top: 40px;
+}
+
+.edit-info {
+    margin-top: 60px;
+   
+}
+
+.user-note {
+    background: lavender;
+    padding: 5px;
+}
+
+.description {
+    margin-top: 30px;
+    border-bottom: 7px dotted firebrick;
+}
+
+.description p {
+    padding: 60px 0 40px 0;
+    font-size: 17px;
+}
+
+.preps {
+    background: darkslategray;
+    color: white;
+    padding: 10px 25px;
+    margin-bottom: 0;
+    font-size: 1.8em;
+}
+
+.main-heading {
+    font-size: 2.5em;
+    font-weight: bold;
+    margin-bottom: 0;
+}
+
+.bold-item {
+    font-weight: bold;
+}
+
+.table-border {
+    border: 1px solid darkslategray;
+}
+
+.table-border td {
+    padding-left: 25px;
 }
 
 footer {
