col offset changed

--- a/templates/registration.html
+++ b/templates/registration.html
@@ -3,8 +3,8 @@
 
 <!-- registration form -->
 <div class="row center-form">
-    <div class="col s12 m8 offset-m2 l2 offset-l5">
-        <h4><i class="small material-icons prefix">assignment</i> Registration</h4>
+    <div class="col s12 m8 offset-m2 l4 offset-l4">
+        <h4>Registration</h4>
         <form action="{{ url_for('register') }}" method=POST class="data-box">
             <div class="input-field col s12">
                 <input id="username" name="username" type="text" class="validate" required maxlength="15">
