footer block added

--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -73,3 +73,10 @@
     {% endfor %}
 </div><!-- // row -->
 {% endblock %}
+{% block footer %}
+
+<footer>
+    <p>Culinary World &copy; 2020</p>
+</footer>
+
+{% endblock %}
