--- a/templates/base.html
+++ b/templates/base.html
@@ -29,7 +29,7 @@
             <div class="nav-wrapper">
                 <a href="{{ url_for('all_recipes') }}" class="brand-logo">Culinary World</a>
                 <ul id="nav-mobile" class="right hide-on-med-and-down">
-                    <li><a class="active" href="{{ url_for('all_recipes') }}">Recipes</a></li>
+                    <li><a href="{{ url_for('all_recipes') }}">Recipes</a></li>
                     {% if 'username' in session %}
                     <li><a href="{{url_for('add_recipe')}}">Add Recipe</a></li>
                     <!-- Dropdown Trigger -->
@@ -46,48 +46,13 @@
     <main class="container">
         {% block content %}{% endblock %}
     </main>
-    <footer>
-        <p>Culinary World &copy; 2020</p>
-    </footer>
-
+    {% block footer %} {% endblock %}
     <!-- Import jQuery -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"
         integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
     <!-- Compiled and minified JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-    <script>
-        function printRecipe() {
-            window.print();
-        }
-    </script>
-    <script>
-        $(document).ready(function () {
-            $('.slider').slider();
-            $('select').formSelect();
-            $('.modal').modal();
-            $(".dropdown-trigger").dropdown();
-
-            /* Dynamically add new input field to form*/
-            $(".add-input-field").on("click", function () {
-                $('<input type="text" class="validate" name="ingredients" id="ingredients" placeholder="Add ingredient" required >').insertBefore(".add-input-field");
-            });
-
-            /*removes last input element from ingredientsform*/
-            $(".delete-last-field").on("click", function () {
-                $("#items input:last").remove();
-            });
-
-            /* Dynamically add new input field to form*/
-            $(".add-step").on("click", function () {
-                $('<textarea name="method" id="method" class="materialize-textarea" placeholder="Add next step" required ></textarea>').insertBefore(".add-step");
-            });
-
-            /*removes last input element from form*/
-            $(".delete-last-step").on("click", function () {
-                $("#steps textarea:last").remove();
-            });
-        });
-    </script>
+    <script src="{{ url_for('static', filename='js/custom.js') }}"></script>
 </body>
 
 </html>
