--- a/templates/edit_recipe.html
+++ b/templates/edit_recipe.html
@@ -1,16 +1,17 @@
 {% extends 'base.html' %}
 {% block content %}
 
-<h3>Edit Recipe</h3>
 <div class="row">
-    <form action="{{ url_for('update_recipe', recipe_id=recipes._id) }}" method="POST" class="col s12">
+    <div class="col s12 l10 offset-l1">
+    <h3 class="main-title">Edit Recipe</h3>
+    <form action="{{ url_for('update_recipe', recipe_id=recipes._id) }}" method="POST" class="add-form">
         <fieldset>
             <legend>Recipe Details</legend>
             <div class="row">
                 <div class="input-field col s12 m6">
                     <i class="material-icons prefix">create</i>
-                    <input id="recipe_name" name="recipe_name" type="text" class="validate"
-                        value="{{ recipes.recipe_name }}">
+                    <input id="recipe_name" name="recipe_name" type="text" class="validate" maxlength="40"
+                        value="{{ recipes.recipe_name }}" required>
                     <label for="recipe_name">Recipe Name</label>
                 </div>
 
@@ -31,16 +32,16 @@
 
                 <div class="input-field col s12 m6">
                     <i class="material-icons prefix">restaurant_menu</i>
-                    <select id="difficulty" name="difficulty" required>
+                    <select id="type" name="difficulty" required>
                         <option value="" disabled selected>Choose Difficulty</option>
-                        {% if difficulty == recipes.difficulty %}
-                        <option value="{{ recipes.difficulty }}" selected>{{recipes.difficulty}}</option>
-                        {% else %} 
-                        <option value="Easy">Easy</option>
-                        <option value="Medium">Medium</option>
-                        <option value="Hard">Hard</option>
-                        {% endif %}
-
+                        {% for difficult in level %}
+                        {% if difficult.d_level == recipes.difficulty %}
+                        <option value="{{ difficult.d_level }}" select>{{ difficult.d_level }}
+                        </option>
+                        {% else %}
+                        <option value="{{ difficult.d_level }}">{{ difficult.d_level }}
+                            {% endif %}
+                        {% endfor %}
                     </select>
                 </div>
 
@@ -61,7 +62,7 @@
                 </div>
                 <div class="input-field col s12 m6">
                     <i class="material-icons prefix">add_a_photo</i>
-                    <input id="image_url" name="image_url" type="text" class="validate" value="{{recipes.image_url }}">
+                    <input id="image_url" name="image_url" type="url" class="validate" value="{{recipes.image_url }}">
                     <label for="image_url">Image URL</label>
                 </div>
                 <div class="input-field col s12 m6">
@@ -75,40 +76,49 @@
         <fieldset>
             <legend>Ingredients</legend>
             <div class="row">
-                <div class="input-field col s12" id="items">
+                <div class="input-field col s12">
                     <i class="material-icons prefix">shopping_basket</i>
                     {% for ingredient in recipes.ingredients %}
-                    <input type="text" name="ingredients" id="ingredients" class="validate" value=" {{ ingredient }} "
+                    
+                    <input type="text" name="ingredients" class="validate" value=" {{ ingredient }} "
                         required>
                     {% endfor %}
-                    <a class="waves-effect waves-light btn-small add-input-field">Add item</a>
-                    <a class="waves-effect waves-light btn-small delete-last-field">Delete Last</a>
+                    <div id="items">
+                        
+                    <a class="waves-effect waves-light btn-small add-input-field margin-r">Add item</a>
+                    <a class="waves-effect waves-light btn-small delete-last-field delete">Delete Last</a>
+                
                 </div>
+            </div>
             </div>
         </fieldset>
         <fieldset>
             <legend>Preparation Steps</legend>
             <div class="row">
-                <div class="input-field col s12" id="steps">
+                <div class="input-field col s12">
                     <i class="material-icons prefix">list</i>
                     {% for step in recipes.method %}
-                    <textarea name="method" id="method" class="materialize-textarea" required>{{ step }}</textarea>
+                    <textarea name="method" class="materialize-textarea" required>{{ step }}</textarea>
                     {% endfor %}
-                    <a class="waves-effect waves-light btn-small add-step">Add item</a>
-                    <a class="waves-effect waves-light btn-small delete-last-step">Delete Last</a>
+                    <div id="steps">
+                    <a class="waves-effect waves-light btn-small add-step margin-r">Add item</a>
+                    <a class="waves-effect waves-light btn-small delete-last-step delete">Delete Last</a>
+                </div>
                 </div>
             </div>
         </fieldset>
         <div class="row">
             <div class="col s12">
-                <button class="btn waves-effect waves-light" type="submit">Update Recipe
-                    <i class="material-icons right">playlist_add</i>
+                <button class="btn waves-effect waves-light margin-r" type="submit">Update
+                    <i class="material-icons left">playlist_add</i>
                 </button>
                 <a href="{{ url_for('recipe_details', recipe_id=recipe_id ) }}"
-                    class="btn waves-effect waves-light">Cancel</a>
+                    class="btn waves-effect waves-light cancel">Cancel
+                    <i class="material-icons left">cancel</i></a>
             </div>
         </div>
     </form>
+</div>
 </div>
 
 {% endblock %}
